--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -41,53 +41,58 @@
 		<table class="table">
 		<tbody class = "style-thead2">
 				<tr>
-					<th>Surname</th>
-					<th>Surname1</th>
+					<td>Surname</td>
+					<td>Surname1</td>
 				
 				</tr>
 				<tr>
-					<th>Name</th>
-					<th>Name1</th>
+					<td>Name</td>
+					<td>Name1</td>
 				
 				</tr>
 				<tr>
-					<th>Patronymic</th>
-					<th>Patronymic1</th>
+					<td>Patronymic</td>
+					<td>Patronymic1</td>
 				
 				</tr>
 				<tr>
-					<th>Rating</th>
-					<th>20</th>
+					<td>Rating</td>
+					<td>20</td>
 				
 				</tr>
 				<tr>
-					<th>Average grade</th>
-					<th>99.9</th>
+					<td>Average Grade</td>
+					<td>99.9</td>
 				
 				</tr>
 				<tr>
-					<th>Package</th>
-					<th>Standart</th>
+					<td>Package</td>
+					<td>Standart</td>
 				
 				</tr>
 				<tr>
-					<th>Birth date</th>
-					<th>29.02.1900</th>
+					<td>Birth Date</td>
+					<td>29.02.1900</td>
 				
 				</tr>
 				<tr>
-					<th>Adress</th>
-					<th>Adress1</th>
+					<td>Address</td>
+					<td>Address1</td>
 				
 				</tr>
 				<tr>
-					<th>Post</th>
-					<th>Post1</th>
+					<td>Post</td>
+					<td>Post1</td>
 				
 				</tr>
 				<tr>
-					<th>Skype</th>
-					<th>Skype1</th>
+					<td>Skype</td>
+					<td>Skype1</td>
+				
+				</tr>
+				<tr>
+					<td>E-mail</td>
+					<td>E-mail1</td>
 				
 				</tr>
 		</tbody>
@@ -100,46 +105,46 @@
 		</div>
 	<!-- Default panel contents -->
 		<!-- Table -->
-		<table class="table">
-			<thead class="style-thead">
-				<tr>
+		<table class="table ">
+			<thead>
+				<tr class = "style-thead">
 				
-					<th>Course</th>
-					<th>Week</th>
-					<th>Control type</th>
-					<th>Grade</th>	
+					<th>Course</td>
+					<th>Week</td>
+					<th>Control type</td>
+					<th>Grade</td>
 				</tr>
 			</thead>
 			<tbody class = "style-thead2" >
 				<tr >
-					<th>Py 101 intro to Python</th>
-					<th>Week 1</th>
-					<th>Tests</th>
-					<th>99%</th>	
+					<td>Py 101 intro to Python</td>
+					<td>Week 1</td>
+					<td>Tests</td>
+					<td>99%</td>	
 				</tr>
 				<tr>
-					<th></th>
-					<th></th>
-					<th>Problem task 1</th>
-					<th>99%</th>	
+					<td></td>
+					<td></td>
+					<td>Problem Task 1</td>
+					<td>99%</td>	
 				</tr>
 				<tr>
-					<th></th>
-					<th></th>
-					<th>Problem task 2</th>
-					<th>99%</th>	
+					<td></td>
+					<td></td>
+					<td>Problem Task 2</td>
+					<td>99%</td>	
 				</tr>
 				<tr>
-					<th></th>
-					<th>Week 2</th>
-					<th>Tests</th>
-					<th>99%</th>	
+					<td></td>
+					<td>Week 2</td>
+					<td>Tests</td>
+					<td>99%</td>	
 				</tr>
 				<tr>
-					<th></th>
-					<th></th>
-					<th>Problem task 1</th>
-					<th>99%</th>	
+					<td></td>
+					<td></td>
+					<td>Problem Task 1</td>
+					<td>99%</td>
 				</tr>
 			</tbody>
 		</table>
