--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -24,7 +24,7 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Main</a></li>
             <li><a href="contact.html">Contacts</a></li>
-			<li class="active"><a href="student_list.html">Student<span class="sr-only">(current)</span></a></li>
+			<li class="active"><a href="#">Students</a></li>
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -44,46 +44,46 @@
 					<th>No</th>
 					<th>Surname</th>
 					<th>Name</th>
-					<th>Adress</th>
+					<th>Address</th>
 					<th>Skype</th>
 				
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
-					<th><a href="student_detail.html">1</a></th>
-					<th><a href="student_detail.html">Surname1</a></th>
-					<th><a href="student_detail.html">Name1</a></th>
-					<th><a href="student_detail.html">Adress1</a></th>
-					<th><a href="student_detail.html">Skype1</a></th>
+					<td><a href="student_detail.html">1</a></td>
+					<td><a href="student_detail.html">Surname1</a></td>
+					<td><a href="student_detail.html">Name1</a></td>
+					<td><a href="student_detail.html">Address1</a></td>
+					<td><a href="student_detail.html">Skype1</a></td>
 				</tr>
 				<tr>
-					<th>2</th>
-					<th>Surname2</th>
-					<th>Name2</th>
-					<th>Adress2</th>
-					<th>Skype2</th>
+					<td>2</td>
+					<td>Surname2</td>
+					<td>Name2</td>
+					<td>Address2</td>
+					<td>Skype2</td>
 				</tr>
 				<tr>
-					<th>3</th>
-					<th>Surname3</th>
-					<th>Name3</th>
-					<th>Adress3</th>
-					<th>Skype3</th>
+					<td>3</td>
+					<td>Surname3</td>
+					<td>Name3</td>
+					<td>Address3</td>
+					<td>Skype3</td>
 				</tr>
 				<tr>
-					<th>4</th>
-					<th>Surname4</th>
-					<th>Name4</th>
-					<th>Adress4</th>
-					<th>Skype4</th>
+					<td>4</td>
+					<td>Surname4</td>
+					<td>Name4</td>
+					<td>Address4</td>
+					<td>Skype4</td>
 				</tr>
 				<tr>
-					<th>5</th>
-					<th>Surname5</th>
-					<th>Name5</th>
-					<th>Adress5</th>
-					<th>Skype5</th>
+					<td>5</td>
+					<td>Surname5</td>
+					<td>Name5</td>
+					<td>Address5</td>
+					<td>Skype5</td>
 				</tr>
 			</tbody>
 		</table>
