--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -17,6 +17,9 @@
     <![endif]-->
   </head>
   <body>
+   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="../static/js/jquery.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
     <nav class=" navbar navbar-inverse ">
       <div class="container-fluid ">
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -36,7 +39,7 @@
 	<div class="panel panel-default container">
 		<!-- Default panel contents -->
 		<div class="panel-body style-thead3"	>
-		<p><h3>Student card</h3></p>
+		<h3>Student card</h3>
 		</div>
 		<table class="table">
 		<tbody class = "style-thead2">
@@ -101,7 +104,7 @@
 	</div>
 	<div class="panel panel-default container">
 		<div class="panel-body style-thead3"	>
-			<p><h3>Perfomance</h3></p>
+			<h3>Perfomance</h3>
 		</div>
 	<!-- Default panel contents -->
 		<!-- Table -->
@@ -123,34 +126,32 @@
 					<td>99%</td>	
 				</tr>
 				<tr>
-					<td></td>
-					<td></td>
+					<td> </td>
+					<td> </td>
 					<td>Problem Task 1</td>
 					<td>99%</td>	
 				</tr>
 				<tr>
-					<td></td>
-					<td></td>
+					<td> </td>
+					<td> </td>
 					<td>Problem Task 2</td>
 					<td>99%</td>	
 				</tr>
 				<tr>
-					<td></td>
+					<td> </td>
 					<td>Week 2</td>
 					<td>Tests</td>
 					<td>99%</td>	
 				</tr>
 				<tr>
-					<td></td>
-					<td></td>
+					<td> </td>
+					<td> </td>
 					<td>Problem Task 1</td>
 					<td>99%</td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="../static/js/jquery.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
+   
   </body>
 </html>
