--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,6 +15,10 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="../static/js/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="../static/js/bootstrap.min.js"></script>
   </head>
   <body>
     <div class="slash-div">
@@ -24,7 +28,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Main</a></li>
-            <li class="active"><a href="#">Contacts</a></li>
+            <li class="active"><a href="contact.html">Contacts</a></li>
 
 			<li><a href="student_list.html">Students</a></li>
 
@@ -84,9 +88,6 @@
           </div>
         </div>
     
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="../static/js/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.min.js"></script>
+    
   </body>
 </html>
