--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,8 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+	<script src="../static/js/jquery.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
   </head>
   <body>
     <nav class=" navbar navbar-inverse ">
@@ -22,7 +24,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Main</a></li>
+            <li class="active"><a href="index.html">Main</a></li>
             <li><a href="contact.html">Contacts</a></li>
 
 			<li><a href="student_list.html">Students</a></li>
@@ -54,7 +56,6 @@
 </div>
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="../static/js/jquery.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
+    
   </body>
 </html>
