--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -14,7 +14,11 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	  
     <![endif]-->
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="../static/js/jquery.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
   </head>
   <body>
     <nav class=" navbar navbar-inverse ">
@@ -24,7 +28,7 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Main</a></li>
             <li><a href="contact.html">Contacts</a></li>
-			<li class="active"><a href="#">Students</a></li>
+			<li class="active"><a href="student_list.html">Students</a></li>
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -89,8 +93,6 @@
 		</table>
 		</div>
 	
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="../static/js/jquery.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
+    
   </body>
 </html>
