--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -32,38 +32,38 @@
 	    </div><!-- /.container-fluid -->
 	  </nav>
     <div class='container font1 body1' >
-      <h1>Eric Idle</span></h1>
-      <img src="../static/images/eric.jpg" alt="Eric Idle photo" height="180" width="180">
+      <h1 id='my_h1'>Eric Idle</span></h1>
+      <img src="../static/images/eric.jpg" alt="Eric Idle photo" id='photo'>
       <h3>Profile</h3>
-      <p> </p>
+      <p id='p1'> </p>
       <table class="table table-hover">
     				<tbody id='id3'>
 								 <tr>
-									 <td>Surname</td>
+									 <td class='table1'>Surname</td>
 									 <td>Idle</td>
 								 </tr>
 								 <tr>
-									 <td>Name</td>
+									 <td class='table1'>Name</td>
 									 <td>Eric</td>
 								 </tr>
 								 <tr>
-									 <td>Patronymic</td>
+									 <td class='table1'>Patronymic</td>
 									 <td>Ivanovych</td>
 								 </tr>
 								 <tr>
-									 <td>Birth Date</td>
+									 <td class='table1'>Birth Date</td>
 									 <td>06/06/1986</td>
 								 </tr>
 								 <tr>
-									 <td>Address</td>
+									 <td class='table1'>Address</td>
 									 <td>Kharkiv, 22 Blukhera str., app. 39</td>
 								 </tr>
 								 <tr>
-									 <td>E-mail</td>
+									 <td class='table1'>E-mail</td>
 									 <td>eric.idle@gmail.com</td>
 								 </tr>
 								 <tr>
-									 <td>Skype</td>
+									 <td class='table1'>Skype</td>
 									 <td>eric.idle</td>
 								 </tr>
 				    </tbody>
@@ -101,11 +101,11 @@
 									 <td>80%</td>
 								 </tr>
 								 <tr>
-									 <td colspan='3'>Average Grade</td>
+									 <td colspan='3' class='table3'>Average Grade</td>
 									 <td>92,5%</td>
 								 </tr>
 								 <tr>
-									 <td colspan='3'>Rating</td>
+									 <td colspan='3' class='table3'>Rating</td>
 									 <td>15</td>
 								 </tr>
 						</tbody>
