--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -29,15 +29,15 @@
         <div class="collapse navbar-collapse test2" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li>
-              <a href="index.html">Main <span class="sr-only">(current)</span></a>
+              <a href="index.html">Main</a>
             </li>
 
             <li>
-              <a href="contact.html">Contacts <span class="sr-only">(current)</span></a>
+              <a href="contact.html">Contacts</a>
             </li>
 
             <li>
-              <a href="student_list.html">Students <span class="sr-only">(current)</span></a>
+              <a href="student_list.html">Students</a>
             </li>
 
           </ul>
@@ -91,8 +91,8 @@
           <td>Харьков, ул. Сумская, 56, кв. 15</td>
         </tr>
         <tr>
-          <th scope="row" class="color">Post</th>
-          <td>62057</td>
+          <th scope="row" class="color">E-mail</th>
+          <td>jura@gmail.com</td>
         </tr>
         <tr>
           <th scope="row" class="color">Skype</th>
