--- a/templates/contact.html
+++ b/templates/contact.html
@@ -29,15 +29,15 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li>
-              <a href="index.html">Main <span class="sr-only">(current)</span></a>
+              <a href="index.html">Main</a>
             </li>
 
             <li class="active">
-              <a href="contact.html">Contacts <span class="sr-only">(current)</span></a>
+              <a href="contact.html">Contacts</a>
             </li>
 
             <li>
-              <a href="student_list.html">Students <span class="sr-only">(current)</span></a>
+              <a href="student_list.html">Students</a>
             </li>
 
           </ul>
