--- a/templates/index.html
+++ b/templates/index.html
@@ -29,15 +29,15 @@
         <div class="collapse navbar-collapse test2" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active">
-          <a href="index.html">Main <span class="sr-only">(current)</span></a>
+          <a href="index.html">Main</a>
         </li>
 
         <li>
-          <a href="contact.html">Contacts <span class="sr-only">(current)</span></a>
+          <a href="contact.html">Contacts</a>
         </li>
 
         <li>
-          <a href="student_list.html">Students <span class="sr-only">(current)</span></a>
+          <a href="student_list.html">Students</a>
         </li>
 
       </ul>
