--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -77,7 +77,7 @@
 </nav>
     <div class="page-header container media">
 		<div class="media-heading"><h1>Students of course PyBursa</h1></div>
-		<h3>List of students november 2015</h3>
+		<h3 class = "style-thead2">List of students november 2015</h3>
 	</div>
 	<div class="panel panel-default container">
 	<!-- Default panel contents -->
@@ -95,14 +95,14 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr>
+				<tr class = "style-thead3">
 					<td><a href="student_detail.html">1</a></td>
 					<td><a href="student_detail.html">Surname1</a></td>
 					<td><a href="student_detail.html">Name1</a></td>
 					<td><a href="student_detail.html">Address1</a></td>
 					<td><a href="student_detail.html">Skype1</a></td>
 				</tr>
-				<tr>
+				<tr class = "style-thead">
 					<td>2</td>
 					<td>Surname2</td>
 					<td>Name2</td>
