--- a/templates/index.html
+++ b/templates/index.html
@@ -80,8 +80,8 @@
 
  
 
-  <h2>Description</h2>
-  <p>Some description of ItBursa courses</p>
+  <h2 class = "style-thead3">Description</h2>
+  <p class = "style-thead2">Some description of ItBursa courses</p>
   <p><a class="btn btn-primary btn-lg" href="http://itbursa.com/about_us" role="button">Learn more</a></p>
 </div>
 
@@ -89,7 +89,7 @@
 
     
 
-  <h2>Raccoongang program courses</h2>
+  <h2 class = "style-thead">Raccoongang program courses</h2>
   <p>Some description of Raccoongang website</p>
   <p><a class="btn btn-primary btn-lg" href="http://edx.raccoongang.com" role="button">Learn more</a></p>
 </div>
