Fix some problem.

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,6 +15,8 @@
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="../static/css/animate.css" type="text/css">
     <link rel="stylesheet" href="../static/css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/creative.css" type="text/css">
+
 
 </head>
 
@@ -85,7 +87,19 @@
             </div>
         </div>
     </header>
+       <!-- jQuery -->
+    <script src="../static/js/jquery.js"></script>
 
+    <!-- Bootstrap Core JavaScript -->
+    <script src="../static/js/bootstrap.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="../static/js/jquery.easing.js"></script>
+    <script src="../static/js/jquery.fittext.js"></script>
+    <script src="../static/js/wow.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="../static/js/creative.js"></script>
 </body>
 
 </html>
