--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="../static/css/animate.css" type="text/css">
     <link rel="stylesheet" href="../static/css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/creative.css" type="text/css">
 
 </head>
 
@@ -36,6 +37,8 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                       <a href="contact.html">Contacts</a>
+                    </li>
+                    <li>
                       <a href="student_list.html">Students</a>
                     </li>
                 </ul>
@@ -64,12 +67,24 @@
                     <p>Ready to start your next project or work with linux?</p>
                     <h2 class="section-heading">Description:</h2>
                     <hr class="primary">
-                    <p>Part One:<br>Intro to linux<br>Filesystem ext4<br>Command line in linux<br>Coming soon...<br></p>
+                    <p>Part One:<br>Intro to linux<br>Filesystem ext4<br>Command line in linux<br>Coming soon...<br><br></p>
                 </div>
             </div>
         </div>
     </section>
+    <!-- jQuery -->
+    <script src="../static/js/jquery.js"></script>
 
+    <!-- Bootstrap Core JavaScript -->
+    <script src="../static/js/bootstrap.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="../static/js/jquery.easing.js"></script>
+    <script src="../static/js/jquery.fittext.js"></script>
+    <script src="../static/js/wow.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="../static/js/creative.js"></script>
 </body>
 
 </html>
