--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -8,13 +8,13 @@
 
     <title>Linux_Bursa - Student's card</title>
 
-
-
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="../static/css/bootstrap.css" type="text/css">
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="../static/css/animate.css" type="text/css">
     <link rel="stylesheet" href="../static/css/style.css" type="text/css">
+    <link rel="stylesheet" href="../static/css/style.css" type="text/css">
+     <link rel="stylesheet" href="css/creative.css" type="text/css">
 
 </head>
 
@@ -38,6 +38,8 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                       <a href="contact.html">Contacts</a>
+                    </li>
+                    <li>  
                       <a href="student_list.html">Students</a>
                     </li>
                 </ul>
@@ -94,7 +96,19 @@
             </div>
         </div>
     </header>
+       <!-- jQuery -->
+    <script src="../static/js/jquery.js"></script>
 
+    <!-- Bootstrap Core JavaScript -->
+    <script src="../static/js/bootstrap.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="../static/js/jquery.easing.js"></script>
+    <script src="../static/js/jquery.fittext.js"></script>
+    <script src="../static/js/wow.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="../static/js/creative.js"></script>
 </body>
 
 </html>
