--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,7 +15,7 @@
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="../static/css/animate.css" type="text/css">
     <link rel="stylesheet" href="../static/css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/creative.css" type="text/css">
+    <link rel="stylesheet" href="../css/creative.css" type="text/css">
 
 
 </head>
