--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../static/css/animate.css" type="text/css">
     <link rel="stylesheet" href="../static/css/style.css" type="text/css">
     <link rel="stylesheet" href="../static/css/style.css" type="text/css">
-     <link rel="stylesheet" href="css/creative.css" type="text/css">
+     <link rel="stylesheet" href="../css/creative.css" type="text/css">
 
 </head>
 
