--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,5 +17,24 @@
 .style-thead3{
 	background: yellow;
 }
+.style-thead4{
+	background: yellow;
+}
+.style-thead5{
+	background: yellow;
+}
+.style-thead6{
+	background: yellow;
+}
+.style-thead7{
+	background: yellow;
+}
+.style-thead8{
+	background: yellow;
+}
+.style-thead9{
+	background: yellow;
+}
+
 
 
