--- a/templates/index.html
+++ b/templates/index.html
@@ -36,17 +36,17 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Main</a></li>
-        <li><a href="contact.html">Contacts</a></li>
-		<li><a href="student_list.html">Students</a></li>
+        <li class="active style-thead3"><a href="index.html">Main</a></li>
+        <li class = "style-thead4"><a href="contact.html">Contacts</a></li>
+		<li class = "style-thead5"><a href="student_list.html">Students</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li class = "style-thead6"><a href="#">Action</a></li>
+            <li class = "style-thead7"><a href="#">Another action</a></li>
+            <li class = "style-thead8"><a href="#">Something else here</a></li>
            
-            <li><a href="#">Separated link</a></li>
+            <li class = "style-thead9"><a href="#">Separated link</a></li>
 				
             <li><a href="#">One more separated link</a></li>
           </ul>
