--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,7 +48,6 @@
 }
 #cnt1 {
   /*background-color:rgba(240, 240, 240, 0.88); */
-  
   width: 90%;
   margin-top: 10px;
   margin-bottom: 20px;
@@ -83,4 +82,57 @@
   list-style: inherit;
   list-style-type: circle;
   margin-left: 20px;
+}
+.row-link:hover {
+  cursor: pointer;
+}
+.table-hover > tbody > tr > td.active:hover,
+.table-hover > tbody > tr > th.active:hover,
+.table-hover > tbody > tr.active:hover > td,
+.table-hover > tbody > tr:hover > .active,
+.table-hover > tbody > tr.active:hover > th {
+  background-color: rgba(210, 230, 205, 1);
+}
+tbody > tr > td:first-child {
+  text-align: center;
+}
+#scard > tbody > tr > td {
+  text-align: left;
+  padding-left: 20px;
+}
+#scard2 > tbody > tr > td {
+  text-align: center;
+  vertical-align: middle;
+}
+#scard2 > thead > tr > th {
+  text-align: center;
+  column-width: auto;
+  background-color: orange;
+}
+#scard2 td.left {
+  text-align: left;
+  padding-left: 25px;
+}
+#scard2 td.right {
+  text-align: right;
+  column-width: auto;
+  padding-right: 65px;
+  margin: 0 auto
+}
+.some_side_menu > li {
+  width: 230px;
+  height: 45px;
+  float: right;
+  padding: 15px;
+  background-color: bisque;
+  text-align: left;
+  vertical-align: middle;
+}
+.some_side_menu > li:hover {
+  background-color: coral;
+}
+#osebe button {
+  clear: both;
+  margin: 20px 0 0 15px;
+  ;
 }
