--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,107 +1,111 @@
 <!DOCTYPE html>
 <!-- saved from url=(0054)http://getbootstrap.com/examples/sticky-footer-navbar/ -->
 <html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../static/images/Other-python.ico">
-    <title>PyBursa: Contact page</title>
-    <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="../static/css/sticky-footer-navbar.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../static/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../static/js/ie-emulation-modes-warning.js"></script>
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="../static/images/Other-python.ico">
+  <title>PyBursa: Contact page</title>
+  <!-- Bootstrap core CSS -->
+  <link href="../static/css/bootstrap.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="../static/css/sticky-footer-navbar.css" rel="stylesheet">
+  <link href="../static/css/style.css" rel="stylesheet">
+  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+  <!--[if lt IE 9]><script src="../static/js/ie8-responsive-file-warning.js"></script><![endif]-->
+  <script src="../static/js/ie-emulation-modes-warning.js"></script>
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+</head>
+
+<body>
+  <!-- Fixed navbar -->
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html"><img class="logo" alt="PyBursa" src="../static/images/Other-python.ico"></a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="index.html">Main</a></li>
-            <li class="active"><a href="contact.html">Contacts</a></li>
-          </ul>
-        </div>
-        <!--/.nav-collapse -->
+        </button>
+        <a class="navbar-brand" href="index.html"><img class="logo" alt="PyBursa" src="../static/images/Other-python.ico"></a>
       </div>
-    </nav>
-    <!-- Begin page content -->
-    <div class="container">
-      <!-- <div class="page-header">
+      <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="index.html">Main</a></li>
+          <li class="active"><a href="contact.html">Contacts</a></li>
+          <li><a href="student_list.html">Students</a></li>
+        </ul>
+      </div>
+      <!--/.nav-collapse -->
+    </div>
+  </nav>
+  <!-- Begin page content -->
+  <div class="container">
+    <!-- <div class="page-header">
         <h1>Профессиональные Python &amp; Django курсы</h1>
         </div> -->
-      <!-- My code here -->
-      <div class="container" id="cnt1">
-        <div class="row feature">
-          <div class="col-md-4">
-            <div>
-              <img src="../static/images/pasha.jpg" alt="Павел Обод" class="img-circle img-thumbnail">
-              <h2>Founder</h2>
-              <p><b>Name:</b> Павел Обод</p>
-              <p><b>Email:</b> itbursa100@gmail.com</p>
-              <p><b>Phone:</b> 0-800-555-44-00</p>
-              <p><b>Skype:</b> azaless</p>
-            </div>
+    <!-- My code here -->
+    <div class="container" id="cnt1">
+      <div class="row feature">
+        <div class="col-md-4">
+          <div>
+            <img src="../static/images/pasha.jpg" alt="Павел Обод" class="img-circle img-thumbnail">
+            <h2>Founder</h2>
+            <p><b>Name:</b> Павел Обод</p>
+            <p><b>Email:</b> itbursa100@gmail.com</p>
+            <p><b>Phone:</b> 0-800-555-44-00</p>
+            <p><b>Skype:</b> azaless</p>
           </div>
-          <div class="col-md-4">
-            <div>
-              <img src="../static/images/alena.jpg" alt="Алена Чайка" class="img-circle img-thumbnail">
-              <h2>Director</h2>
-              <p><b>Name:</b> Алена Чайка</p>
-              <p><b>Email:</b> alena.itbursa@gmail.com</p>
-              <p><b>Phone:</b> 0-800-555-23-25</p>
-              <p><b>Skype:</b> alena.itbursa</p>
-            </div>
+        </div>
+        <div class="col-md-4">
+          <div>
+            <img src="../static/images/alena.jpg" alt="Алена Чайка" class="img-circle img-thumbnail">
+            <h2>Director</h2>
+            <p><b>Name:</b> Алена Чайка</p>
+            <p><b>Email:</b> alena.itbursa@gmail.com</p>
+            <p><b>Phone:</b> 0-800-555-23-25</p>
+            <p><b>Skype:</b> alena.itbursa</p>
           </div>
-          <div class="col-md-4">
-            <div>
-              <img src="../static/images/darka.jpg" alt="Дария Михалевич" class="img-circle img-thumbnail">
-              <h2>Manager</h2>
-              <p><b>Name:</b> Дария Михалевич</p>
-              <p><b>Email:</b> daria.mykhalevych@gmail.com</p>
-              <p><b>Phone:</b> 0-800-555-11-12</p>
-              <p><b>Skype:</b> darka.darka.darka.darka.</p>
-            </div>
+        </div>
+        <div class="col-md-4">
+          <div>
+            <img src="../static/images/darka.jpg" alt="Дария Михалевич" class="img-circle img-thumbnail">
+            <h2>Manager</h2>
+            <p><b>Name:</b> Дария Михалевич</p>
+            <p><b>Email:</b> daria.mykhalevych@gmail.com</p>
+            <p><b>Phone:</b> 0-800-555-11-12</p>
+            <p><b>Skype:</b> darka.darka.darka.darka.</p>
           </div>
         </div>
       </div>
-      <!--  end of my code --> 
     </div>
-    <footer class="footer">
-      <div class="container">
-        <p class="text-muted">san '2015. All rights reserved.</p>
-      </div>
-    </footer>
-    <!-- Bootstrap core JavaScript
+    <!--  end of my code -->
+  </div>
+  <footer class="footer">
+    <div class="container">
+      <p class="text-muted">san '2015. All rights reserved.</p>
+    </div>
+  </footer>
+  <!-- Bootstrap core JavaScript
       ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="../static/js/jquery.min.js"></script>
-    <script src="../static/js/bootstrap.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../static/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="../static/js/jquery.min.js"></script>
+  <script src="../static/js/bootstrap.js"></script>
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <script src="../static/js/ie10-viewport-bug-workaround.js"></script>
+</body>
+
 </html>
 
 <!-- yet another attempt -->
