Panel commented out

--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -67,8 +67,8 @@
           </tr>
         </thead>
         <tbody>
-          <tr id="row1" class="active row-link">
-            <td>1</td>
+          <tr class="active row-link">
+            <td><a href="student_detail.html">1</a></td>
             <td>Lykhomanov</td>
             <td>Ihor</td>
             <td>Украина, г.Харьков, ул. Кирова, д. 6, кв. 10</td>
