--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -55,11 +55,9 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-8">
-          <h2>
-				Lykhomanov Ihor
-			</h2><img alt="Student's photo" src="../static/images/student.jpg" class="img-circle" />
+          <h2>Lykhomanov Ihor</h2><img alt="Student's photo" src="../static/images/student.jpg" class="img-circle" />
         </div>
-        <div class="col-xs-6 col-md-4">
+        <!-- <div class="col-xs-6 col-md-4">
           <ul class="nav nav-pills nav-stacked some_side_menu">
             <li>О Python (оригинальный сайт)</li>
             <li>Организация</li>
@@ -67,7 +65,7 @@
               <p>Программа</li>
             <li>Тренеры</li>
           </ul>
-        </div>
+        </div> -->
       </div>
       <div class="row">
         <div class="col-sd-8" id="osebe">
@@ -78,9 +76,7 @@
       </div>
       <div class="row">
         <div class="col-md-5">
-          <h3>
-				Student's card
-			</h3>
+          <h3>Student's card</h3>
           <table id="scard" class="table table-bordered table-hover table-condensed">
             <tbody>
               <tr class="success">
@@ -169,10 +165,8 @@
       </div>
       <div class="row">
         <div class="col-md-8">
-          <h3>
-				Performance
-			</h3>
-          <table id="scard2" class="table table-bordered table-hover table-condensed">
+          <h3>Performance</h3>
+          <table id="scard2" class="table table-bordered table-condensed">
             <thead>
               <tr>
                 <th>
