--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,7 @@
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
+        <!-- test -->
     </nav>
     <div class="container">
         <div class="row">
