--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
     <title>Web with Python</title>
 
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    {% load staticfiles %}
+    <link href="{% static '../static/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,10 +20,10 @@
   </head>
   <body>
 <ul class="nav nav-pills">
-  <li role="presentation" class="active"><a href="#">PyBursa</a></li>
-  <li role="presentation"><a href="#">Main</a></li>
-  <li role="presentation"><a href="contact.html">Contacts</a></li>
-  <li role="presentation"><a href="student_list.html">Students</a></li>
+  <li role="presentation"><a href="#">PyBursa</a></li>
+  <li role="presentation" class="active"><a href="{% url 'index' %}">Main</a></li>
+  <li role="presentation"><a href="{% url 'contact' %}">Contacts</a></li>
+  <li role="presentation"><a href="{% url 'student_list' %}">Students</a></li>
 </ul>
 <div class="container">
 <div class="jumbotron">
@@ -38,8 +39,10 @@
 </div>
 </div>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="../static/js/jquery.min.js"></script>
+  {% load staticfiles %}
+  <script src="{% static '../static/js/jquery.min.js' %}"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.min.js"></script>
+    {% load staticfiles %}
+    <script src="{% static '../static/js/bootstrap.min.js' %}"></script>
   </body>
 </html>
