--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -8,6 +8,7 @@
     <title>Students List</title>
 
     <!-- Bootstrap -->
+    {% load staticfiles %}
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -19,10 +20,10 @@
   </head>
   <body>
 <ul class="nav nav-pills">
-  <li role="presentation" class="active"><a href="#">PyBursa</a></li>
-  <li role="presentation"><a href="index.html">Main</a></li>
-  <li role="presentation"><a href="contact.html">Contacts</a></li>
-  <li role="presentation"><a href="#">Students</a></li>
+    <li role="presentation"><a href="{% url 'index' %}">PyBursa</a></li>
+  <li role="presentation"><a href="{% url 'index' %}">Main</a></li>
+  <li role="presentation"><a href="{% url 'contact' %}">Contacts</a></li>
+  <li role="presentation" class="active"><a href="{% url 'student_list' %}">Students</a></li>
 </ul>
 <div class="container">
 <div class="page-header">
@@ -45,7 +46,7 @@
       <td><b>Skype<b><td>  
     </tr>
     <tr>
-      <td><a href="student_detail.html">1</a><td>
+        <td><a href="{% url 'student_detail' %}">1</a><td>
       <td>Neymyrok<td>
       <td>Eugene<td>
       <td>Traktorostroiteley, ave, 138<td>
@@ -84,8 +85,10 @@
 </div>
 </div>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    {% load staticfiles %}    
     <script src="../static/js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
+    {% load staticfiles %}
     <script src="../static/js/bootstrap.min.js"></script>
   </body>
 </html>
