--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -8,8 +8,8 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Student detail</title>
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/style.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -29,14 +29,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="../static/images/logo.jpg" alt="img"></a>
+                <a class="navbar-brand" href="/"><img src="../static/images/logo.jpg" alt="img"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html">Main</a></li>
-                    <li><a href="contact.html">Contacts</a></li>
-                    <li><a href="student_list.html">Students</a></li>
+                    <li><a href="/">Main</a></li>
+                    <li><a href="/contact/">Contacts</a></li>
+                    <li class="active"><a href="/student_list/">Students</a></li>
+                    <li><a href="/instructors/">Instructors</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -151,7 +152,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
 </body>
 
 </html>
