--- a/templates/contact.html
+++ b/templates/contact.html
@@ -29,7 +29,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/"><img src="../static/images/logo.jpg" alt="img"></a>
+                {% load staticfiles %}
+                <a class="navbar-brand" href="/"><img src="{% static "images/logo.jpg" alt="img" %}"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
