--- a/templates/instructors_list.html
+++ b/templates/instructors_list.html
@@ -48,9 +48,9 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="dark-orange">Instuctors</h1>
-                {% for poll in polls %}
-                    <p>{{ poll.name }} {{ poll.surname }}</p>
-                {% endfor %}
+                {# {% for poll in polls %} #}
+                    {# <p>{{ poll.name }} {{ poll.surname }}</p> #}
+                {# {% endfor %} #}
             </div>
         </div>
     </div>
