--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,8 +10,8 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Main Page</title>
     <!-- Bootstrap -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/style.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -29,7 +31,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                {% load staticfiles %}
+                
                 <a class="navbar-brand" href="/"><img src="{% static "images/logo.jpg" alt="img" %}"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -38,7 +40,6 @@
                     <li class="active"><a href="/">Main</a></li>
                     <li><a href="/contact/">Contacts</a></li>
                     <li><a href="/student_list/">Students</a></li>
-                    <li><a href="/instructors/">Instructors</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -85,7 +86,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </body>
 
 </html>
