--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,8 +6,8 @@
     <title>Студент Русанов Дмитрий страница с личными данными</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
 </head>
 <body class="color-black">
@@ -22,9 +23,9 @@
                     <h3 class="masthead-brand">PyBursa</h3>
                     <nav>
                         <ul class="nav masthead-nav">
-                            <li><a href="index.html"> Main </a></li>
-                            <li><a href="student_list.html"> Students </a></li>
-                            <li><a href="contact.html"> Contacts </a></li>
+                            <li><a href="{% url 'main' %}"> Main </a></li>
+                            <li  class="active"><a href="{% url 'students_list' %}"> Students </a></li>
+                            <li><a href="{% url 'contact' %}"> Contacts </a></li>
                         </ul>
                     </nav>
                 </div>
@@ -200,7 +201,7 @@
 
 <!-- start scripts -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="../static/js/bootstrap.js"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
 <!--/ end scripts -->
 </body>
 </html>
