--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -16,7 +16,7 @@
           <div class="container-fluid">
             <div class="navbar-header">
               <a class="navbar-brand" href="{% url 'index' %}">
-                <img class="sl-brand" alt="GodsBursa" src="../static/images/gb-logo.jpg">
+                <img class="sl-brand" alt="GodsBursa" src="{% static 'images/gb-logo.jpg' %}">
               </a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
