--- a/templates/index.html
+++ b/templates/index.html
@@ -27,8 +27,8 @@
                     <h3 class="masthead-brand">PyBursa</h3>
                     <nav>
                         <ul class="nav masthead-nav">
-                            <li class="active"><a href="{% url 'main' %}"> Main </a></li>
-                            <li><a href="{% url 'students_list' %}"> Students </a></li>
+                            <li class="active"><a href="{% url 'index' %}"> Main </a></li>
+                            <li><a href="{% url 'student_list' %}"> Students </a></li>
                             <li><a href="{% url 'contact' %}"> Contacts </a></li>
                         </ul>
                     </nav>
