--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -23,8 +23,8 @@
                     <h3 class="masthead-brand">PyBursa</h3>
                     <nav>
                         <ul class="nav masthead-nav">
-                            <li><a href="{% url 'main' %}"> Main </a></li>
-                            <li  class="active"><a href="{% url 'students_list' %}"> Students </a></li>
+                            <li><a href="{% url 'index' %}"> Main </a></li>
+                            <li  class="active"><a href="{% url 'student_list' %}"> Students </a></li>
                             <li><a href="{% url 'contact' %}"> Contacts </a></li>
                         </ul>
                     </nav>
@@ -57,7 +57,7 @@
                             <tbody>
                                 <tr class="success text-danger">
                                     <th scope="row">
-                                        <a href="{% url 'student_details' %}">1</a>
+                                        <a href="{% url 'student_detail' %}">1</a>
                                     </th>
                                     <td>Русанов</td>
                                     <td>Дмитрий</td>
