--- a/templates/contact.html
+++ b/templates/contact.html
@@ -34,7 +34,7 @@
 
              <div class="jumbotron commands">
                  <div class="container">
-                     <img src="../static/images/Shocked-Pups.jpg">
+                     <img src="{% static 'images/Shocked-Pups.jpg' %}">
                  </div>
              </div>
 
@@ -44,7 +44,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <img class="img-circle"
-                             src="../static/images/McCTpH_E.jpg"
+                             src="{% static 'images/McCTpH_E.jpg' %}"
                              alt="Generic placeholder image" width="140" height="140">
 
                         <h2 class="deep-orange-darken-1">Director</h2>
@@ -67,7 +67,7 @@
                     <!-- /.col-lg-4 -->
                     <div class="col-lg-4">
                         <img class="img-circle"
-                             src="../static/images/6ec195d634dc1f56d1970d8750a8945008bc3389.jpg"
+                             src="{% static 'images/6ec195d634dc1f56d1970d8750a8945008bc3389.jpg' %}"
                              alt="Generic placeholder image" width="140" height="140">
 
                         <h2 class="green">Manager</h2>
@@ -88,7 +88,7 @@
                     <!-- /.col-lg-4 -->
                     <div class="col-lg-4">
                         <img class="img-circle"
-                             src="../static/images/python.png"
+                             src="{% static 'images/python.png' %}"
                              alt="Generic placeholder image" width="140" height="140">
 
                         <h2 class="red">Founder</h2>
