--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
     <div class="row">
         <div class="col-lg-4">
             <img class="img-circle"
-                 src="../static/images/course-information.png"
+                 src="{% static 'images/course-information.png' %}"
                  alt="Generic placeholder image" width="140" height="140">
 
             <h2>Description</h2>
@@ -73,7 +73,7 @@
         <!-- /.col-lg-4 -->
         <div class="col-lg-4">
             <img class="img-circle"
-                 src="../static/images/Course-Outline.png"
+                 src="{% static 'images/Course-Outline.png' %}"
                  alt="Generic placeholder image" width="140" height="140">
 
             <h2>Program</h2>
@@ -87,7 +87,7 @@
         <!-- /.col-lg-4 -->
         <div class="col-lg-4">
             <img class="img-circle"
-                 src="../static/images/python.png"
+                 src="{% static 'images/python.png' %}"
                  alt="Generic placeholder image" width="140" height="140">
 
             <h2>PyBursa 3.0</h2>
