--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -39,7 +39,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <img class="img-circle"
-                                    src="../static/images/764493581.gif"
+                                    src="{% static 'images/764493581.gif'  %}"
                                     alt="Generic placeholder image" width="140" height="140">
                             </div>
                         </div>
